--- a/web07-Js_Intro/ejercicios/ejercicio01.html
+++ b/web07-Js_Intro/ejercicios/ejercicio01.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Web 07 - Ejercicio 1</h1>
-    <button>Click me</button>
+  <button onclick="alert('Hola')">Click me</button>
     <p>Pulsa el botón para mostrar un saludo</p>
+    <!-- Agregar dos botones que muentren un saludo diferente -->
+     <button onclick="alert(' Hola Muggle')">Picale</button>
+     <button onclick="alert('Te quiero')">Sorpresa</button>
 </body>
 </html>
