Feat: Realice cambios en ejercicio01.html

--- a/web07-Js_Intro/ejercicios/ejercicio01.html
+++ b/web07-Js_Intro/ejercicios/ejercicio01.html
@@ -9,5 +9,9 @@
     <h1>Web 07 - Ejercicio 1</h1>
     <button>Click me</button>
     <p>Pulsa el botón para mostrar un saludo</p>
+    
+    <h1>Abizaic - Ejercicio 1</h1>
+    <button>Click me</button>
+    <p>Pulsa el botón para mostrar un saludo</p>
 </body>
 </html>
