feat: se añaden tres botones de saludo

--- a/web07-Js_Intro/ejercicios/ejercicio01.html
+++ b/web07-Js_Intro/ejercicios/ejercicio01.html
@@ -9,5 +9,8 @@
     <h1>Web 07 - Ejercicio 1</h1>
     <button>Click me</button>
     <p>Pulsa el botón para mostrar un saludo</p>
+    <button onclick="alert('Holi')" id="botonSaludo">Haz clic para saludar</button>
+    <button onclick="alert('saluditos')" id="botonSaludo">Haz clic para saludar</button>
+    <button onclick="alert('saludo coordial')" id="botonSaludo">Haz clic para saludar</button>
 </body>
 </html>
