--- a/web07-Js_Intro/index.html
+++ b/web07-Js_Intro/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Web 07</h1>
     <p>Felicidades por su primer mes</p>
-    <button>Click me</button>
+    <button onclick="saludo()">Click me</button>
 </body>
 </html>
