--- a/web07-Js_Intro/ejercicios/ejercicio01.html
+++ b/web07-Js_Intro/ejercicios/ejercicio01.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Web 07 - Ejercicio 1</h1>
-    <button>Click me</button>
-    <p>Pulsa el botón para mostrar un saludo</p>
+    <button onclick="alert('Hola')" >Click me</button>
+    <!-- Agregar dos botones que muentren un saludo diferente -->
+    <p onclick="alert('Banana Brain')">Pulsa el botón para mostrar un saludo</p>
 </body>
 </html>
