feat: load script using the defer attribute

--- a/web07-Js_Intro/ejercicios/ejercicio03-2.html
+++ b/web07-Js_Intro/ejercicios/ejercicio03-2.html
@@ -22,7 +22,7 @@
     </p>
     <p onclick="changeColor( this , 'yellow')">Cambiar a color amarillo</p>
     <p onclick="changeColor( this , 'blue')">Cambiar a color azul</p>
-    <script src="./myScript.js" >
+    <script src="./myScript.js" defer>
         console.log("Este mensaje nunca se mostrará");
     </script>
 </body>
