feat:Realice ejercicios

--- a/web07-Js_Intro/ejercicios/ejercicio01.html
+++ b/web07-Js_Intro/ejercicios/ejercicio01.html
@@ -11,7 +11,19 @@
     <p>Pulsa el botón para mostrar un saludo</p>
     
     <h1>Abizaic - Ejercicio 1</h1>
-    <button>Click me</button>
+    <button onclick="alert(Hola)">Click me</button>
     <p>Pulsa el botón para mostrar un saludo</p>
+
+     <h1>Abizaic - Ejercicio 2</h1>
+    <button onclick="saludar()">Click me</button>
+    <p>Pulsa el botón para mostrar un saludo</p>
+
 </body>
+<script>
+    function saludar(){
+        alert("Hola desde escript");
+    }
+</script>
+
 </html>
+
