feat: contact page

--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>JavaScript Course - JS01</title>
+  <title>JavaScript Course</title>
   <!-- Normalize CSS -->
   <link rel="stylesheet" href="./src/css/normalize.css" />
   <!-- Bootstrap core CSS -->
@@ -35,6 +35,10 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contáctanos</a>
             </li>
+            </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <main class="container text-center mt-5">
@@ -45,7 +49,7 @@
       </figure>
       <!-- principal title -->
       <div class="col-lg-3 col-12 text-warning">
-        <h1>JS 02</h1>
+        <h1 id="title">JS 02</h1>
       </div>
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
