--- a/js-01-data_types/index.html
+++ b/js-01-data_types/index.html
@@ -35,6 +35,15 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contáctanos</a>
             </li>
+            <li class="nav-item">
+              <a title="Calculadora de edad"
+               class="nav-link" 
+               href="./src/pages/calculadora/calculadora.html">Calculadora</a>
+            </li>
+          </ul>
+         </div>  
+      </div>
+    </nav> 
   </header>
 
   <main class="container text-center mt-5">
