Feat: Se agregan ejercicios

--- a/js-01-data_types/index.html
+++ b/js-01-data_types/index.html
@@ -24,7 +24,7 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div>class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" href="#">Principal</a>
@@ -35,6 +35,16 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contáctanos</a>
             </li>
+            <li class="nav-item">
+              <a 
+              title="Calculadora de edad"
+              class="nav-link" 
+              href="./src/pages/calculadora/calculadora.html">Calculadora</a>
+            </li>
+          </ul>
+        </div> 
+      </div>
+    </nav>
   </header>
 
   <main class="container text-center mt-5">
