--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <!-- Main custom style -->
-  <link rel="stylesheet" href="./src/css/style.css" />
+  <link rel="stylesheet" href="./src/css/style.css" />  
 </head>
 
 <body class="bg-dark text-light">
@@ -65,8 +65,12 @@
     </section>
 
     <section class="row my-3">
-
+      <button onclick="(function inicializacion(){
+        console.log('Hola desde el botón');
+        console.log('Alguien cumple años hoy?')
+      })()">Click me</button>
     </section>
+    <p>El resultado del área del círculo es: <span id="area-circulo"></span> </p>
   </main>
 
   <footer class="container text-center">   
@@ -77,8 +81,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <!-- Main custom JS -->
-  <script src="./src/js/main.js"></script>
+  <!-- Main custom JS -->  
+  <script src="./src/js/main.js" defer></script>
 </body>
 
 </html>
