feat: uso de callbacks

--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -71,6 +71,7 @@
       })()">Click me</button>
     </section>
     <p>El resultado del área del círculo es: <span id="area-circulo"></span> </p>
+    <p>El saludo es: <span id="saludo-callback"></span> </p>
   </main>
 
   <footer class="container text-center">   
