feat: ejercicio con callback imprimir en p, h2 y consola

--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -72,6 +72,8 @@
     </section>
     <p>El resultado del área del círculo es: <span id="area-circulo"></span> </p>
     <p>El saludo es: <span id="saludo-callback"></span> </p>
+    <p>El resultado es: <span id="resultado-sumatoria"></span> </p>
+    <h2>El resultado es: <span id="resultadoH2-sumatoria"></span> </h2>
   </main>
 
   <footer class="container text-center">   
