feat: ejercicios nuevos

--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -64,8 +64,13 @@
       </div>
     </section>
 
-    <section class="row my-3">
-
+    <section class="row my-3"></section>
+      <button onclick="(function inicialization(){
+        console.log('Hola desde el boton');
+        console.log('Alguien cumple años hoy?');
+      })()"> Click me </button>
+      <p>El resultado del area del circulo es: <span id="area-circulo"> </span></p>
+<p>El resultado es: <span id="resultado-sumatoria"></span> </p>
     </section>
   </main>
 
