feat: modifique js-02-funtions

--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -65,8 +65,13 @@
     </section>
 
     <section class="row my-3">
-
+      <button onclick="(function inicializacion(){
+        console.log('Hola desde el botón');
+        console.log('Alguien cumple años hoy?')
+      })()"">Click me</button>
+      <!--no se recomienda este codigo-->
     </section>
+    <p>El resultado del área del círculo es: <span id="area-circulo"></span> </p>
   </main>
 
   <footer class="container text-center">   
