--- a/js-02-functions/index.html
+++ b/js-02-functions/index.html
@@ -65,8 +65,17 @@
     </section>
 
     <section class="row my-3">
-
+      <BUTton onclick="(function inicializacion(){
+        console.log(`Hola desde el boton`);
+        console.log(`Alguien cumple años hoy?`); 
+      })()"></BUTton>
     </section>
+      <p>El resultado del área del círculo es: <span id="area-circulo"></span> </p>
+      <p>El saludo es: <span id="saludo-callback"></span> </p>
+      <p>El resultado es: <span id="resultado-sumatoria"></span> </p>
+      <h2>El resultado es: <span id="resultadoH2-sumatoria"></span> </h2>
+
+    
   </main>
 
   <footer class="container text-center">   
