--- a/js-01-data_types/index.html
+++ b/js-01-data_types/index.html
@@ -35,6 +35,16 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contáctanos</a>
             </li>
+            <li class="nav-item">
+              <a
+              title="Calculadora de edad" 
+              class="nav-link" 
+              href="./src/pages/Calcualdora/calculadora.html">Calculadora</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <main class="container text-center mt-5">
@@ -66,32 +76,32 @@
 
     <section class="row my-3">
 
-        <div class="col-md-6 col-lg-4 col-12">
-          <h3>Actividad 1</h3>
-          <p>Crear una variable de cada tipo de dato y mostrarlas en consola.</p>
-          <button class="btn btn-secondary" id="btn-activity-1">Ejecutar</button>
-        </div>
-        <div class="col-md-6 col-lg-4 col-12">
-          <h3>Actividad 2</h3>
-          <p>Convertir una variable en un tipo number.</p>
-          <button class="btn btn-secondary" id="btn-activity-2">Ejecutar</button>
-        </div>
-        <div class="col-md-6 col-lg-4 col-12">
-          <h3>Actividad 3</h3>
-          <p>Convertir una variable en un tipo string.</p>
-          <button class="btn btn-secondary" id="btn-activity-3">Ejecutar</button>
-        </div>
-        <div class="col-md-6 col-lg-4 col-12">
-          <h3>Actividad 4</h3>
-          <p>Convertir una variable en un tipo boolean.</p>
-          <button class="btn btn-secondary" id="btn-activity-4">Ejecutar</button>
-        </div>
+      <div class="col-md-6 col-lg-4 col-12">
+        <h3>Actividad 1</h3>
+        <p>Crear una variable de cada tipo de dato y mostrarlas en consola.</p>
+        <button class="btn btn-secondary" id="btn-activity-1">Ejecutar</button>
+      </div>
+      <div class="col-md-6 col-lg-4 col-12">
+        <h3>Actividad 2</h3>
+        <p>Convertir una variable en un tipo number.</p>
+        <button class="btn btn-secondary" id="btn-activity-2">Ejecutar</button>
+      </div>
+      <div class="col-md-6 col-lg-4 col-12">
+        <h3>Actividad 3</h3>
+        <p>Convertir una variable en un tipo string.</p>
+        <button class="btn btn-secondary" id="btn-activity-3">Ejecutar</button>
+      </div>
+      <div class="col-md-6 col-lg-4 col-12">
+        <h3>Actividad 4</h3>
+        <p>Convertir una variable en un tipo boolean.</p>
+        <button class="btn btn-secondary" id="btn-activity-4">Ejecutar</button>
+      </div>
 
     </section>
   </main>
 
-  <footer class="container text-center">   
-      <p>&copy; 2021 JavaScript Course</p>    
+  <footer class="container text-center">
+    <p>&copy; 2021 JavaScript Course</p>
   </footer>
 
   <!-- Bootstrap core JS -->
