feat: solucuon del ejercicio melate-chocolate

--- a/js-04-arrays_and_loops/index.html
+++ b/js-04-arrays_and_loops/index.html
@@ -93,7 +93,7 @@
     <section class="row my-3 justify-content-center">
       <!-- button -->
        <div class="col-md-4">
-        <button>Genera tus números</button>
+        <button class="btn btn-warning" onclick="generarNumerosDeLaSuerte()">Genera tus números</button>
        </div>
       <!-- números de la suerte -->
        <div  class="col-md-4">
