Adding of classes

--- a/js-04-arrays_and_loops/index.html
+++ b/js-04-arrays_and_loops/index.html
@@ -89,7 +89,18 @@
       <ul class="text-start" id="cantantes-lista">
       </ul>
     </section>
-  </main>
+   <!-- Melate Chocolate -->
+<section class="row my-3 justify-content-center">
+  <!-- Botón -->
+  <div class="col-md-4">
+    <button type="button" class="btn btn-primary" onclick="generarNumerosDeLaSuerte()">Genera tus números</button>
+  </div>
+
+  <!-- Números de la suerte -->
+  <div class="col-md-4">
+    <p id="melate-chocolate"></p> 
+  </div>
+</section>
 
   <footer class="container text-center">   
       <p>&copy; 2025 JavaScript Course</p>    
