--- a/js-04-arrays_and_loops/index.html
+++ b/js-04-arrays_and_loops/index.html
@@ -77,6 +77,13 @@
             <li>Usar los diferentes bucles de JavaScript: While loop y For loop</li>
             <li>Explicar la diferencia entre un bucle For y un bucle While.</li>          
         </ul>
+        <ul id="ejercicio">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+
+        </ul>
       </div>
     </section>
     <!-- listado de gelatinas -->
