fix: se arreglan problemasfr vcode

--- a/js-04-arrays_and_loops/index.html
+++ b/js-04-arrays_and_loops/index.html
@@ -89,6 +89,17 @@
       <ul class="text-start" id="cantantes-lista">
       </ul>
     </section>
+    <!-- Melate Chocolate -->
+    <section class="row my-3 justify-content-center">
+      <!-- button -->
+       <div class="col-md-4">
+        <button id="generar-btn" type="button" class="btn btn-outline-warning">Genera tus números</button>
+       </div>
+      <!-- números de la suerte -->
+       <div  class="col-md-4">
+        <p id="melate-chocolate">1-2-3-4-5-6</p> 
+       </div>
+    </section>  
   </main>
 
   <footer class="container text-center">   
