--- a/js-04-arrays_and_loops/index.html
+++ b/js-04-arrays_and_loops/index.html
@@ -84,6 +84,18 @@
           <li></li>
 
         </ul>
+
+        <!-- Melate Chocolate -->
+    <section class="row my-3 justify-content-center">
+      <!-- button -->
+       <div class="col-md-4">
+        <button>Genera tus números</button>
+       </div>
+      <!-- números de la suerte -->
+       <div  class="col-md-4">
+        <p id="melate-chocolate">1-2-3-4-5-6</p> 
+       </div>
+    </section>
       </div>
     </section>
     <!-- listado de gelatinas -->
