feat: utlizando DOM

--- a/js-06-DOM_manipulation/index.html
+++ b/js-06-DOM_manipulation/index.html
@@ -42,6 +42,15 @@
           página web.
         </p>
         <p class="text-start">
+          <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Fernando Lopez Falcon  </h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          </div>
           Los <a class="text-warning" target="_blank"
             href="https://developer.mozilla.org/es/docs/Web/JavaScript/Guide/Expressions_and_operators#operadores">operadores</a>
           son símbolos que permiten realizar operaciones sobre uno o más valores (operandos)
