--- a/js-06-DOM_manipulation/index.html
+++ b/js-06-DOM_manipulation/index.html
@@ -33,7 +33,7 @@
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
         <h2>Manipulación del DOM</h2>
-        <p class="text-start">
+        <p id="tarjeta" class="text-start">
           El <a class="text-warning" target="_blank"
             href="https://developer.mozilla.org/es/docs/Web/API/Document_Object_Model/Introduction#%C2%BFqu%C3%A9_es_el_dom">DOM
             (Document Object Model)</a> es una interfaz de programación que representa un documento HTML o XML como una
@@ -47,6 +47,7 @@
           son símbolos que permiten realizar operaciones sobre uno o más valores (operandos)
           para producir un resultado.
         </p>
+        
         <p id="descripcion-operadores" class="text-start">
           Los operadores y expresiones en JavaScript permiten manipular datos, realizar cálculos y tomar decisiones en
           el código. Son esenciales para construir lógica y funcionalidad en cualquier programa.
