--- a/js-06-DOM_manipulation/index.html
+++ b/js-06-DOM_manipulation/index.html
@@ -41,11 +41,8 @@
           programación como JavaScript, permitiendo acceder, modificar y manipular dinámicamente los elementos de la
           página web.
         </p>
-        <p class="text-start">
-          Los <a class="text-warning" target="_blank"
-            href="https://developer.mozilla.org/es/docs/Web/JavaScript/Guide/Expressions_and_operators#operadores">operadores</a>
-          son símbolos que permiten realizar operaciones sobre uno o más valores (operandos)
-          para producir un resultado.
+        <p id="tarjeta" class="text-start">
+         
         </p>
         <p id="descripcion-operadores" class="text-start">
           Los operadores y expresiones en JavaScript permiten manipular datos, realizar cálculos y tomar decisiones en
@@ -84,7 +81,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- Header js -->  
-   <script src="/src/modules/header/header.js"></script>
+   <script src="/js-06-DOM_manipulation/src/modules/header/header.js"></script>
   <!-- Main custom JS -->
   <script src="./src/js/main.js"></script>
 </body>
