--- a/js-07-api_fetch/index.html
+++ b/js-07-api_fetch/index.html
@@ -23,10 +23,15 @@
       <!-- logo -->
       <figure class="col-lg-5 col-9">
         <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
+        <div class="mt-3">
+          <input type="text" class="form-control mb-2" id="nombreInput" placeholder="Escribe nombre">
+          <button class="btn btn-warning" id="btnGuardar">Guardar</button>
+        </div>
       </figure>
       <!-- principal title -->
       <div class="col-lg-3 col-12 text-warning">
         <h1>JS 07</h1>
+        <h2 id="bienvenida"></h2>
       </div>
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
