--- a/js-06-DOM_manipulation/src/pages/mi-playera/miplayera.html
+++ b/js-06-DOM_manipulation/src/pages/mi-playera/miplayera.html
@@ -1,4 +1,25 @@
-<!-- Bootstrap core JS -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Normalize CSS-->
+<link rel="stylesheet" href="/src/css/normalize.css"/>
+    <!--Bootsrap core CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+          crossorigin="anonymous">
+    <title>Playeras favoritas</title>
+</head>
+<body>
+    <header id="header">
+
+    </header>
+    <main>
+        <h1> Dime tu playera favorita y ¿porque? </h1>
+    </main>
+    <footer> </footer>
+    <!-- Bootstrap core JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 crossorigin="anonymous"></script>
@@ -7,5 +28,4 @@ crossorigin="anonymous"></script>
 <!-- Main custom JS -->
 <script src="./src/js/main.js"></script>
 </body>
-
 </html>
