--- a/js-07-api_fetch/index.html
+++ b/js-07-api_fetch/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+
+  <script>
+    console.log(aVariableTipoLet); // ReferenceError
+    console.log(aVariableTipoVar); // undefined
+    function aMiFuncion(){}
+  </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JavaScript Course</title>
@@ -12,10 +19,18 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <!-- Main custom style -->
   <link rel="stylesheet" href="./src/css/style.css" />
+  <script>
+    let aVariableTipoLet = "Soy variable tipo let";
+    var aVariableTipoVar = "Soy variable tipo var";
+  </script>
 </head>
 
 <body class="bg-dark text-light">
 
+  <script>
+    console.log(aVariableTipoLet);
+    console.log(aVariableTipoVar);
+  </script>
   <header id="header"></header>
 
   <main class="container text-center mt-5">
@@ -23,10 +38,16 @@
       <!-- logo -->
       <figure class="col-lg-5 col-9">
         <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
+        <div class="mt-3">
+          <input type="text" class="form-control mb-2" id="nombreInput" placeholder="Escribe nombre" >
+          <!-- <button onclick="aLlamadaBotonGuardar()" class="btn btn-warning" id="btnGuardar">Guardar</button> -->
+          <button class="btn btn-warning" id="btnGuardar">Guardar</button>
+        </div>
       </figure>
       <!-- principal title -->
       <div class="col-lg-3 col-12 text-warning">
         <h1>JS 07</h1>
+        <h2 id="bienvenida"></h2>
       </div>
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
