--- a/js-07-api_fetch/index.html
+++ b/js-07-api_fetch/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+
+<script>
+    console.log(aVariableTipoLet);
+    console.log(aVariableTipoVar);
+    function aMiFuncion(){}
+  </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JavaScript Course</title>
@@ -12,22 +19,42 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <!-- Main custom style -->
   <link rel="stylesheet" href="./src/css/style.css" />
+
+<script>
+    let aVariableTipoLet = "Soy variable tipo let";
+    var aVariableTipoVar = "Soy variable tipo var";
+  </script>
+
 </head>
 
 <body class="bg-dark text-light">
+
+  <script>
+    console.log(aVariableTipoLet);
+    console.log(aVariableTipoVar);
+  </script>
 
   <header id="header"></header>
 
   <main class="container text-center mt-5">
     <section class="row align-items-center justify-content-center" id="main-content">
       <!-- logo -->
-      <figure class="col-lg-5 col-9">
-        <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
-      </figure>
-      <!-- principal title -->
-      <div class="col-lg-3 col-12 text-warning">
-        <h1>JS 07</h1>
+
+      <div class="col-lg-5 col-9 text-start text-warning">
+        <!-- Imagen -->
+        <figure>
+          <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
+        </figure>
+
+        <!-- Título y formulario -->
+        <h1 id="greeting-title" class="mt-3">Hola, persona invitada</h1>
+        <div class="d-flex my-2">
+          <input id="name-input" type="text" class="form-control me-2" placeholder="Ingresa tu nombre" />
+          <button id="save-name-btn" class="btn btn-warning">Guardar</button>
+        </div>
       </div>
+
+
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
         <h2>API FETCH</h2>
@@ -74,7 +101,7 @@
     crossorigin="anonymous"></script>
   <!-- Main custom JS -->
   <script type="module" src="/src/js/main.js"></script>
-  
+
 </body>
 
 </html>
