--- a/js-07-api_fetch/src/pages/contact/contact.html
+++ b/js-07-api_fetch/src/pages/contact/contact.html
@@ -20,6 +20,11 @@
 
     <main class="container text-center mt-5">
         <h1>Contact</h1>
+
+        <!-- Cards -->
+         <div id="cards" class="row">
+
+         </div>
     </main>
 
     <footer id="footer"></footer>
