feat: agregue en contact.html un bloque de contenido principal con estructura bootstrap para tarjetas, en contact.js construí tarjetas de rick and morty, en la carpeta register agregue leerinputsformulario.js y objetos.js, register.js maneje un formulario de registro , y añadi la carpeta public/json con su file rick.json al cual le puse el API de Rick and Morty y modifique el nombre de personajes por lilian sanchez y delgado smith

--- a/js-07-api_fetch/src/pages/contact/contact.html
+++ b/js-07-api_fetch/src/pages/contact/contact.html
@@ -19,7 +19,12 @@
     <header id="header"></header>
 
     <main class="container text-center mt-5">
-        <h1>Contact</h1>
+        <h1>Cards</h1>
+        <!-- Cards -->
+         <div id="cards" class="row">
+
+        </div>
+
     </main>
 
     <footer id="footer"></footer>
