--- a/js-07-api_fetch/index.html
+++ b/js-07-api_fetch/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+  <script>
+    console.log(aVariableTipoLet);
+    console.log(aVariableTipoVar);
+    function aMiFuncion() { }
+  </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JavaScript Course</title>
@@ -12,10 +18,17 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <!-- Main custom style -->
   <link rel="stylesheet" href="./src/css/style.css" />
+  <script>
+    let aVariableTipoLet = "Soy variable tipo let";
+    var aVariableTipoVar = "Soy variable tipo var";
+  </script>
 </head>
 
 <body class="bg-dark text-light">
-
+  <script>
+    console.log(aVariableTipoLet);//error
+    console.log(aVariableTipoVar);//undefined
+  </script>
   <header id="header"></header>
 
   <main class="container text-center mt-5">
@@ -23,11 +36,23 @@
       <!-- logo -->
       <figure class="col-lg-5 col-9">
         <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
+        <div class="mt-3">
+          <input type="text" class="form-control mb-2" id="nombreInput" placeholder="Escribe nombre">
+          <button onclick="manejoDelBotonGuardar" class="btn btn-warning" id="btnGuardar">Guardar</button>
+        </div>
       </figure>
+      <!--poner un boton debajo de la imagen y un input para guardar en el local storage-->
+
+
+
       <!-- principal title -->
       <div class="col-lg-3 col-12 text-warning">
         <h1>JS 07</h1>
+        <h2 id="bienvenida"></h2>
       </div>
+      <!--Agregar lo que imprime el boton de nombre-->
+
+
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
         <h2>API FETCH</h2>
@@ -74,7 +99,8 @@
     crossorigin="anonymous"></script>
   <!-- Main custom JS -->
   <script type="module" src="/src/js/main.js"></script>
-  
+  <!--Para poder importar js tgenemos que tener el type="module" -->
+
 </body>
 
 </html>
