--- a/js-07-api_fetch/src/pages/contact/contact.html
+++ b/js-07-api_fetch/src/pages/contact/contact.html
@@ -19,7 +19,12 @@
     <header id="header"></header>
 
     <main class="container text-center mt-5">
-        <h1>Contact</h1>
+        <h1>Tarjetas</h1>
+        <!--Crear cards de Rick And Morty-->
+        <div id="cards" class="row">
+
+        </div>
+
     </main>
 
     <footer id="footer"></footer>
