feat: Products Page

--- a/js-08-Unit_test/src/pages/products/products.html
+++ b/js-08-Unit_test/src/pages/products/products.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" type="image/svg+xml" href="/icons/dinosaur.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Productos</title>
+  <title>Products</title>
 </head>
 
 <body class="bg-dark text-light">
@@ -15,7 +16,6 @@
 
   <footer id="footer"></footer>
 
-  <!-- Products  JS -->
   <script type="module" src="./products.js"></script>
 </body>
 
