--- a/js-08-Unit_test/index.html
+++ b/js-08-Unit_test/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icons/dinosaur.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Java Script Course</title>
 </head>
 
-<body>
+<body class="bg-dark text-light">
+  
   <header id="header"></header>
 
   <main id="main" class="container text-center mt-5"> </main>
