--- a/js-07-api_fetch/index.html
+++ b/js-07-api_fetch/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+
+  <script>
+    // console.log(aVariableTipoLet); // ReferenceError 
+    // console.log(aVariableTipoVar); //undefined 
+    function aMiFuncion(){}
+  </script>
+
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>JavaScript Course</title>
@@ -12,9 +20,18 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <!-- Main custom style -->
   <link rel="stylesheet" href="./src/css/style.css" />
+    <script>
+    let aVariableTipoLet = "Soy variable tipo let";
+    var aVariableTipoVar = "Soy variable tipo var";
+  </script>
 </head>
 
 <body class="bg-dark text-light">
+
+  <script>
+    console.log(aVariableTipoLet);
+    console.log(aVariableTipoVar);
+  </script>
 
   <header id="header"></header>
 
@@ -23,10 +40,15 @@
       <!-- logo -->
       <figure class="col-lg-5 col-9">
         <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
+        <div class="mt-3">
+          <input class="form-control mb-2" id="nombreInput" placeholder="Escribe nombre">
+          <button onclick="" class="btn btn-warning" id="btnGuardar">Guardar</button>
+        </div>
       </figure>
       <!-- principal title -->
       <div class="col-lg-3 col-12 text-warning">
         <h1>JS 07</h1>
+        <h2 id="bienvenida"></h2>
       </div>
       <!-- sesion description -->
       <div class="col-lg-4 col-12">
@@ -73,8 +95,9 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <!-- Main custom JS -->
-  <script type="module" src="/src/js/main.js"></script>
+   <script type="module" src="/src/js/main.js"></script>
   
+  </form>
 </body>
 
 </html>
