--- a/js-07-api_fetch/src/pages/register/register.html
+++ b/js-07-api_fetch/src/pages/register/register.html
@@ -25,7 +25,7 @@
         <div class="row justify-content-center">
             <!-- Decorativo -->
             <div class="col-md-6 d-none d-md-block">
-                <img class="img-fluid rounded-3" src="/public/images/ninja-girl-02.jpg"
+                <img class="img-fluid rounded-3" src="../../../public/images/ninja-girl-02.jpg"
                     alt="Chica ninja con trofeos de desarrolladora web">
             </div>
             <!-- formulario de contacto -->
